--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
 	<artifactId>oauth2-oidc-sdk</artifactId>
 	<version>5.17.3</version>
 </dependency>
+<dependency>
+    <groupId>com.restfb</groupId>
+    <artifactId>restfb</artifactId>
+    <version>1.16.0</version>
+</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
