--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
     <version>1.16.0</version>
 </dependency>
 
+	<dependency>
+      <groupId>org.owasp.encoder</groupId>
+      <artifactId>encoder</artifactId>
+      <version>1.2</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
